Fixed website layout so it appears on mobile exactly how it used to before this PR.

--- a/docs/src/components/Hero/StartScreen/styles.module.css
+++ b/docs/src/components/Hero/StartScreen/styles.module.css
@@ -35,6 +35,10 @@
   color: var(--swm-landing-heading);
 }
 
+.rnLabel {
+  margin-right: 10px;
+}
+
 .subheadingLabel {
   font-family: var(--swm-title-landing-font);
   font-size: 32px;
